feat(packet): uml & implementation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,8 @@
 		"moduleResolution": "node",
 		"paths": {
 			"@/*": ["./src/*"],
+			"@packet/*": ["./src/packet/*"],
+
 			"@event/*": ["./src/event/*"]
 		}
   }
