--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
 		"paths": {
 			"@/*": ["./src/*"],
 			"@packet/*": ["./src/packet/*"],
-
+			"@entity/*": ["./src/entity/*"],
 			"@event/*": ["./src/event/*"]
 		}
   }
