--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,13 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false
+    "noFallthroughCasesInSwitch": false,
+		"moduleResolution": "node",
+		"paths": {
+			"@/*": ["./src/*"],
+			"@packet/*": ["./src/packet/*"],
+			"@entity/*": ["./src/entity/*"],
+			"@event/*": ["./src/event/*"]
+		}
   }
 }
