--- a/.github/workflows/build-n-push-after-test.yml
+++ b/.github/workflows/build-n-push-after-test.yml
@@ -50,6 +50,7 @@ jobs:
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Docker meta
         id: meta
