chore(config): missing arm64 platform

--- a/.github/workflows/build-n-push-after-test.yml
+++ b/.github/workflows/build-n-push-after-test.yml
@@ -65,7 +65,7 @@ jobs:
           context: .
           file: ./Dockerfile
           builder: ${{ steps.buildx.outputs.name }}
-          platforms: linux/amd64,linux/amd64
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
