--- a/.github/workflows/build-n-push-after-test.yml
+++ b/.github/workflows/build-n-push-after-test.yml
@@ -15,7 +15,7 @@ env:
 
 jobs:
   build:
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    if: ${{ github.event_name == 'workflow_dispatch' || (github.event_name == 'workflow_run' && github.event.workflow_run.conclusion == 'success') }}
     name: Build
     strategy:
       matrix:
