--- a/.e2e.test.env
+++ b/.e2e.test.env
@@ -2,5 +2,5 @@
 WEBSOCKET_PORT=8080
 
 # JWT
-JWT_PUBLIC_KEY_PATH=
-JWT_PRIVATE_KEY_PATH=
+JWT_PUBLIC_KEY_PATH=./test_public_key.pem
+JWT_PRIVATE_KEY_PATH=./test_private_key.pem
