--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ WEBSOCKET_PORT=8080
 
 # JWT
 JWT_PUBLIC_KEY_PATH=./public_key.pem
-JWT_PRIVATE_KEY_PATH=./private_key
+JWT_PRIVATE_KEY_PATH=./private_key.pem
