--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./jest-e2e.ts"
+    "test:e2e": "jest --config ./jest-e2e.ts",
+    "test:e2e:watch": "jest --watch --config ./jest-e2e.ts"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
