--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "@nestjs/platform-socket.io": "^10.2.8",
     "@nestjs/websockets": "^10.2.8",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "ulidx": "^2.2.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
